[package]
name = "tpe"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Sastre <sebastianconcept@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
fraction = "0.15.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
